{
  "version": 4,
  "terraform_version": "0.15.1",
  "serial": 755,
  "lineage": "b40f10b2-7185-cd9f-f34f-e80f81a1b599",
  "resources": [
    {
      "module": "module.ec2_linux_httpbin-istio",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5add21e87587ae1",
            "arn": "arn:aws:ec2:us-east-2:192760260411:instance/i-077a6057b8d73630c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-077a6057b8d73630c",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "gsi-reinier",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0048438c961949eaf",
            "private_dns": "ip-10-0-101-25.us-east-2.compute.internal",
            "private_ip": "10.0.101.25",
            "public_dns": "ec2-18-217-55-12.us-east-2.compute.amazonaws.com",
            "public_ip": "18.217.55.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ea3304b829aa2e8e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07667214596ef5be2",
            "tags": {
              "Environment": "devel",
              "Name": "onboardvm",
              "Terraform": "true",
              "linux": "true"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "onboardvm"
            },
            "vpc_security_group_ids": [
              "sg-0541291335ceddc52"
            ]
          },
          "dependencies": [
            "aws_key_pair.keypair",
            "module.linux_server_fw.aws_security_group.this",
            "module.linux_server_fw.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.linux_server_fw",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:192760260411:security-group/sg-0541291335ceddc52",
            "description": "Security group for managment server with SSH port open within VPC",
            "egress": [],
            "id": "sg-0541291335ceddc52",
            "ingress": [],
            "name": "linux_fw-20210510092318201700000001",
            "name_prefix": "linux_fw-",
            "owner_id": "192760260411",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "linux_fw"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f405a02d47fa722"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.linux_server_fw",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "DNS",
            "from_port": 53,
            "id": "sgrule-148753299",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0541291335ceddc52",
            "self": false,
            "source_security_group_id": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.linux_server_fw.aws_security_group.this",
            "module.linux_server_fw.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "DNS",
            "from_port": 53,
            "id": "sgrule-563122604",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0541291335ceddc52",
            "self": false,
            "source_security_group_id": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.linux_server_fw.aws_security_group.this",
            "module.linux_server_fw.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-3772424260",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0541291335ceddc52",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.linux_server_fw.aws_security_group.this",
            "module.linux_server_fw.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-1594106698",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0541291335ceddc52",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.linux_server_fw.aws_security_group.this",
            "module.linux_server_fw.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All IPV4 ICMP",
            "from_port": -1,
            "id": "sgrule-92803659",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-0541291335ceddc52",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.linux_server_fw.aws_security_group.this",
            "module.linux_server_fw.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.linux_server_fw",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-2745762184",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0541291335ceddc52",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.linux_server_fw.aws_security_group.this",
            "module.linux_server_fw.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All IPV4 ICMP",
            "from_port": -1,
            "id": "sgrule-1191015094",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "icmp",
            "security_group_id": "sg-0541291335ceddc52",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.linux_server_fw.aws_security_group.this",
            "module.linux_server_fw.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-00ee8cbc2caafc937",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-117-5-228.us-east-2.compute.amazonaws.com",
            "public_ip": "18.117.5.228",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "devel",
              "Name": "onboarding-vm",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:192760260411:internet-gateway/igw-06d9b561dbbeb21f9",
            "id": "igw-06d9b561dbbeb21f9",
            "owner_id": "192760260411",
            "tags": {
              "Environment": "devel",
              "Name": "onboarding-vm",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08f405a02d47fa722"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00ee8cbc2caafc937",
            "id": "nat-090468238d09af701",
            "network_interface_id": "eni-050a4d175fb9eb9eb",
            "private_ip": "10.0.101.15",
            "public_ip": "18.117.5.228",
            "subnet_id": "subnet-07667214596ef5be2",
            "tags": {
              "Environment": "devel",
              "Name": "onboarding-vm",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-071438f2498d0fc921080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-090468238d09af701",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-071438f2498d0fc92",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06d9b561dbbeb21f9",
            "id": "r-rtb-0a8f40f1cea4e46d21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a8f40f1cea4e46d2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:192760260411:route-table/rtb-071438f2498d0fc92",
            "id": "rtb-071438f2498d0fc92",
            "owner_id": "192760260411",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "devel",
              "Name": "onboarding-vm",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08f405a02d47fa722"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:192760260411:route-table/rtb-0a8f40f1cea4e46d2",
            "id": "rtb-0a8f40f1cea4e46d2",
            "owner_id": "192760260411",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "devel",
              "Name": "onboarding-vm",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08f405a02d47fa722"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e9346968c5f2ac6",
            "route_table_id": "rtb-071438f2498d0fc92",
            "subnet_id": "subnet-07bd31187093b6b26"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0812eb6bd4f138fc2",
            "route_table_id": "rtb-0a8f40f1cea4e46d2",
            "subnet_id": "subnet-07667214596ef5be2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:192760260411:subnet/subnet-07bd31187093b6b26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-07bd31187093b6b26",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "192760260411",
            "tags": {
              "Environment": "devel",
              "Name": "onboarding-vm",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "devel",
              "Name": "onboarding-vm",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08f405a02d47fa722"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:192760260411:subnet/subnet-07667214596ef5be2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-07667214596ef5be2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "192760260411",
            "tags": {
              "Environment": "devel",
              "Name": "onboarding-vm",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "devel",
              "Name": "onboarding-vm",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08f405a02d47fa722"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:192760260411:vpc/vpc-08f405a02d47fa722",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e73e993fbaae175c",
            "default_route_table_id": "rtb-0c1ce6c77c4c10f7d",
            "default_security_group_id": "sg-0f88cbf03216aaf2b",
            "dhcp_options_id": "dopt-c614a7ad",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08f405a02d47fa722",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c1ce6c77c4c10f7d",
            "owner_id": "192760260411",
            "tags": {
              "Environment": "devel",
              "Name": "onboarding-vm",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "devel",
              "Name": "onboarding-vm",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}